config-root/namespaces/jx-staging/http-python-jx/http-python-jx-http-python-jx-deploy.yaml
# Source: http-python-jx/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-python-jx-http-python-jx
  labels:
    draft: draft-app
    chart: "http-python-jx-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'http-python-jx'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-staging
spec:
  selector:
    matchLabels:
      app: http-python-jx-http-python-jx
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: http-python-jx-http-python-jx
    spec:
      serviceAccountName: http-python-jx-http-python-jx
      containers:
        - name: http-python-jx
          image: "10.109.147.42/andrei-sys/http-python-jx:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
