config-root/namespaces/jx-staging/http-python-jx/http-python-jx-svc.yaml
# Source: http-python-jx/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-python-jx
  labels:
    chart: "http-python-jx-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'http-python-jx'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: http-python-jx-http-python-jx
